--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile files('libs/achartengine-1.0.0.jar')
     compile files('libs/androidplot-core-0.6.1.jar')
     compile 'com.google.android.gms:play-services:3.2.65'
+    compile 'com.android.support:cardview-v7:22.0.0'
 }
