--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,29 +51,28 @@
             android:name=".Activities.Main_Screen"
             android:configChanges="orientation"
             android:label="@string/app_name" />
+
         <activity android:name=".Activities.Compass" />
         <activity android:name=".Activities.MapActivity" />
+
         <activity
             android:name=".Activities.ActivitySelectGraph"
             android:label="@string/app_name" />
         <activity
             android:name=".Activities.ActivityDynamicGraphingVoltage"
             android:label="@string/app_name" />
-
+        <activity
+            android:name=".Activities.GraphActivity"/>
+        <activity
+            android:name=".Activities.ActivitySelectedChart"/>
         <activity
             android:name=".Activities.ActivityGraphing"
-
             android:label="@string/app_name"
-
             android:screenOrientation="landscape" />
-        >
         <activity
             android:name=".Activities.Speedometer"
-
             android:label="@string/app_name"
-
             android:screenOrientation="landscape" />
-        >
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
