updated dtc records

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,7 @@
             android:name=".Activities.GraphActivity"/>
         <activity
             android:name=".Activities.ActivitySelectedChart"/>
+        <activity android:name=".Activities.CheckFaultCodeMain" />
         <activity
             android:name=".Activities.ActivityGraphing"
             android:label="@string/app_name"
