--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile files('libs/androidplot-core-0.6.1.jar')
     compile 'com.google.android.gms:play-services:3.2.65'
     compile 'com.android.support:cardview-v7:22.0.0'
+    compile 'it.neokree:MaterialTabs:0.11'
 }
