updated fault code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
         <activity
             android:name=".Activities.ActivitySelectedChart"/>
         <activity android:name=".Activities.CheckFaultCodeMain" />
+        <activity android:name=".Activities.FaultCodesDetailActivty"/>
         <activity
             android:name=".Activities.ActivityGraphing"
             android:label="@string/app_name"
