--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+    }
 }
 
 dependencies {
@@ -24,7 +37,19 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile files('libs/achartengine-1.0.0.jar')
     compile files('libs/androidplot-core-0.6.1.jar')
-    compile 'com.google.android.gms:play-services:3.2.65'
     compile 'com.android.support:cardview-v7:22.0.0'
     compile 'it.neokree:MaterialTabs:0.11'
+    compile 'com.android.support:gridlayout-v7:22.1.1'
+    compile 'com.google.maps.android:android-maps-utils:0.3+'
+    compile files('libs/commons-logging-1.1.1.jar')
+    compile files('libs/google-http-client-1.15.0-rc.jar')
+    compile files('libs/google-http-client-android-1.15.0-rc.jar')
+    compile files('libs/google-http-client-jackson2-1.15.0-rc.jar')
+    compile files('libs/httpclient-4.0.1.jar')
+    compile files('libs/httpcore-4.0.1.jar')
+    compile files('libs/jackson-core-2.1.3.jar')
+    compile files('libs/jackson-core-asl-1.9.11.jar')
+    compile 'com.google.android.gms:play-services:7.0.0'
+    compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
+    compile 'de.hdodenhof:circleimageview:1.2.2'
 }
