--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+    <permission android:name="com.android.cesova.permission.MAPS_RECEIVE" android:protectionLevel="signature"/>
+    <uses-permission android:name="com.android.cesova.permission.MAPS_RECEIVE"/>
+
     <!-- Maps API needs OpenGL ES 2.0. -->
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -24,6 +28,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyAqruZgI9t2AtyYLtU0ZKiqYSiixLB_2o4" />
         <activity
             android:name=".Activities.MainActivity"
             android:label="@string/app_name">
@@ -53,7 +60,7 @@
             android:label="@string/app_name" />
 
         <activity android:name=".Activities.Compass" />
-        <activity android:name=".Activities.MapActivity" />
+        <activity android:name=".Map.MapActivity" />
 
         <activity
             android:name=".Activities.ActivitySelectGraph"
@@ -75,9 +82,12 @@
             android:name=".Activities.Speedometer"
             android:label="@string/app_name"
             android:screenOrientation="landscape" />
-
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBT5qOFt_kAewrOoK3xHpItEn-p1psWxvg" />
+        <activity android:name=".Map.DirectionsInputActivity"/>
+        <activity android:name=".Map.DirectionsMapActivty"/>
+        <activity android:name=".Activities.EmmisionActivty"/>
+        <activity android:name=".Activities.TemperatureActivty"/>
+        <activity android:name=".Activities.CheckFaultCodesActivty"/>
+        <activity android:name=".Activities.EngineMilActivty"/>
+        <activity android:name=".Fragments.RealTimeInformationFragment"/>
     </application>
 </manifest>
